fix: ensure connector images run as non-root kafka user

--- a/jdbc-slim/Dockerfile
+++ b/jdbc-slim/Dockerfile
@@ -7,3 +7,5 @@ ENV MAVEN_REPO_CENTRAL="" \
     JDBC_MD5=02a3b4ecc4afa42758b5285ed5f659f0
 
 RUN docker-maven-download debezium jdbc "$DEBEZIUM_VERSION" "$JDBC_MD5"
+
+USER kafka
