--- a/snowflake-slim/Dockerfile
+++ b/snowflake-slim/Dockerfile
@@ -8,3 +8,5 @@ ENV SNOWFLAKE_VERSION="3.3.0" \
     SNOWFLAKE_MD5=9231b96dbc7ca68d1bf535fa41859dbb
 
 RUN docker-maven-download snowflake snowflake-kafka-connector "$SNOWFLAKE_VERSION" "$SNOWFLAKE_MD5"
+
+USER kafka
