--- a/mariadb-slim/Dockerfile
+++ b/mariadb-slim/Dockerfile
@@ -7,3 +7,5 @@ ENV MAVEN_REPO_CENTRAL="" \
     MARIADB_MD5=142c7725042551032b43556e0a751fc3
 
 RUN docker-maven-download debezium mariadb "$DEBEZIUM_VERSION" "$MARIADB_MD5"
+
+USER kafka
